// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ButtonGroup match snapshot correctly  without UNSAFE_style 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      {
        "flexWrap": "nowrap",
      },
      undefined,
    ]
  }
  testID="ButtonGroup"
>
  <View
    onLayout={[Function]}
    style={{}}
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "visible",
          },
          [
            {
              "marginHorizontal": 8,
            },
            {
              "marginVertical": 0,
            },
          ],
        ]
      }
      testID="Button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 1000,
              "borderWidth": 1,
              "flexDirection": "row",
              "flexShrink": 1,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "paddingHorizontal": 16,
              "paddingVertical": 0,
            },
            {},
          ]
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Bogle",
                "fontStyle": "normal",
                "fontWeight": "700",
                "textAlign": "center",
              },
              {
                "color": "#2e2f32",
                "fontFamily": "Bogle",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 24,
                "textAlign": "center",
                "textDecorationLine": "underline",
              },
              {
                "fontSize": 14,
                "lineHeight": 32,
              },
              {},
              {},
              {},
            ]
          }
        >
          Cancel
        </Text>
        <View
          style={
            [
              {
                "alignSelf": "center",
                "left": 16,
                "position": "absolute",
                "width": "100%",
              },
              {
                "left": 15,
                "marginVertical": 3,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={{}}
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "visible",
          },
          [
            {
              "marginHorizontal": 8,
            },
            {
              "marginVertical": 0,
            },
          ],
        ]
      }
      testID="Button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 1000,
              "borderWidth": 1,
              "flexDirection": "row",
              "flexShrink": 1,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#0071dc",
              "borderColor": "#0071dc",
            },
            {
              "paddingHorizontal": 16,
              "paddingVertical": 0,
            },
            {},
          ]
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Bogle",
                "fontStyle": "normal",
                "fontWeight": "700",
                "textAlign": "center",
              },
              {
                "color": "#fff",
                "fontFamily": "Bogle",
                "fontStyle": "normal",
                "fontWeight": "700",
              },
              {
                "fontSize": 14,
                "lineHeight": 32,
              },
              {},
              {},
              {},
            ]
          }
        >
          Continue
        </Text>
        <View
          style={
            [
              {
                "alignSelf": "center",
                "left": 16,
                "position": "absolute",
                "width": "100%",
              },
              {
                "left": 15,
                "marginVertical": 3,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Test ButtonGroup match snapshot correctly with maxWidth 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      {
        "flexWrap": "nowrap",
      },
      {
        "maxWidth": 100,
      },
    ]
  }
  testID="ButtonGroup"
>
  <View
    onLayout={[Function]}
    style={{}}
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "visible",
          },
          [
            {
              "marginHorizontal": 8,
            },
            {
              "marginVertical": 0,
            },
          ],
        ]
      }
      testID="Button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 1000,
              "borderWidth": 1,
              "flexDirection": "row",
              "flexShrink": 1,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#0071dc",
              "borderColor": "#0071dc",
            },
            {
              "paddingHorizontal": 16,
              "paddingVertical": 0,
            },
            {},
          ]
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Bogle",
                "fontStyle": "normal",
                "fontWeight": "700",
                "textAlign": "center",
              },
              {
                "color": "#fff",
                "fontFamily": "Bogle",
                "fontStyle": "normal",
                "fontWeight": "700",
              },
              {
                "fontSize": 14,
                "lineHeight": 32,
              },
              {},
              {},
              {},
            ]
          }
        >
          Continue
        </Text>
        <View
          style={
            [
              {
                "alignSelf": "center",
                "left": 16,
                "position": "absolute",
                "width": "100%",
              },
              {
                "left": 15,
                "marginVertical": 3,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Test ButtonGroup match snapshot correctly with three buttons  1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      {
        "flexWrap": "nowrap",
      },
      undefined,
    ]
  }
  testID="ButtonGroup"
>
  <View
    onLayout={[Function]}
    style={{}}
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "visible",
          },
          [
            {
              "marginHorizontal": 8,
            },
            {
              "marginVertical": 0,
            },
          ],
        ]
      }
      testID="Button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 1000,
              "borderWidth": 1,
              "flexDirection": "row",
              "flexShrink": 1,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "paddingHorizontal": 16,
              "paddingVertical": 0,
            },
            {},
          ]
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Bogle",
                "fontStyle": "normal",
                "fontWeight": "700",
                "textAlign": "center",
              },
              {
                "color": "#2e2f32",
                "fontFamily": "Bogle",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 24,
                "textAlign": "center",
                "textDecorationLine": "underline",
              },
              {
                "fontSize": 14,
                "lineHeight": 32,
              },
              {},
              {},
              {},
            ]
          }
        >
          yes delete 1 message
        </Text>
        <View
          style={
            [
              {
                "alignSelf": "center",
                "left": 16,
                "position": "absolute",
                "width": "100%",
              },
              {
                "left": 15,
                "marginVertical": 3,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={{}}
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "visible",
          },
          [
            {
              "marginHorizontal": 8,
            },
            {
              "marginVertical": 0,
            },
          ],
        ]
      }
      testID="Button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 1000,
              "borderWidth": 1,
              "flexDirection": "row",
              "flexShrink": 1,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "paddingHorizontal": 16,
              "paddingVertical": 0,
            },
            {},
          ]
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Bogle",
                "fontStyle": "normal",
                "fontWeight": "700",
                "textAlign": "center",
              },
              {
                "color": "#2e2f32",
                "fontFamily": "Bogle",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 24,
                "textAlign": "center",
                "textDecorationLine": "underline",
              },
              {
                "fontSize": 14,
                "lineHeight": 32,
              },
              {},
              {},
              {},
            ]
          }
        >
          Cancel
        </Text>
        <View
          style={
            [
              {
                "alignSelf": "center",
                "left": 16,
                "position": "absolute",
                "width": "100%",
              },
              {
                "left": 15,
                "marginVertical": 3,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={{}}
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "visible",
          },
          [
            {
              "marginHorizontal": 8,
            },
            {
              "marginVertical": 0,
            },
          ],
        ]
      }
      testID="Button"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 1000,
              "borderWidth": 1,
              "flexDirection": "row",
              "flexShrink": 1,
              "justifyContent": "center",
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#0071dc",
              "borderColor": "#0071dc",
            },
            {
              "paddingHorizontal": 16,
              "paddingVertical": 0,
            },
            {},
          ]
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            [
              {
                "fontFamily": "Bogle",
                "fontStyle": "normal",
                "fontWeight": "700",
                "textAlign": "center",
              },
              {
                "color": "#fff",
                "fontFamily": "Bogle",
                "fontStyle": "normal",
                "fontWeight": "700",
              },
              {
                "fontSize": 14,
                "lineHeight": 32,
              },
              {},
              {},
              {},
            ]
          }
        >
          Continue
        </Text>
        <View
          style={
            [
              {
                "alignSelf": "center",
                "left": 16,
                "position": "absolute",
                "width": "100%",
              },
              {
                "left": 15,
                "marginVertical": 3,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;
